<resources>
    <string name="app_name">Dev Finder</string>
    <string name="user_detail">User Detail</string>
    <string name="default_avatar_url">https://avatars.githubusercontent.com/u/69817149?v=4</string>
    <string name="default_name">Name Of User</string>
    <string name="default_username">username</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan Username Github</string>
    <string name="followers">%1$s Followers</string>
    <string name="following">%1$s Following</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description">content description</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="darkmode">Dark Mode</string>
</resources>